--- a/index.html
+++ b/index.html
@@ -8,133 +8,143 @@
   <title>Milymila E-Commerce Website</title>
 </head>
 <body>
-<!--first navbar-->
-  <div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-success">
-      <div class="container">
-        <div class="w-100 d-flex justify-content-between">
-          <div>
-           <img src="/images/envelpoe.png" style="width:20px; height:20px; filter:invert(100%);" contact-info>
-           <a href="" class="navbar-sm-brand text-light text-decoration-none contact-info">info@milymilashop.com</a>
-           <img src="/images/phone.png" style="width:20px; height:20px; filter:invert(100%);" contact-info>
-           <a href="" class="navbar-sm-brand text-white text-decoration-none contact-info">+233 358 3566 231</a>
-          </div>
-          <div>
-            <img src="/images/facebook.png" style="width:20px; height:20px; filter:invert(100%);"class="space">
-            <img src="/images/Ig.png" style="width:20px; height:20px; filter:invert(100%);" class="space">
-            <img src="/images/tweet.png" style="width:20px; height:20px; filter:invert(100%);" class="space">
-          </div>
-        </div>
+
+<!-- First navbar  -->
+<nav class="navbar navbar-expand-lg navbar-light bg-success">
+  <div class="container">
+    <div class="w-100 d-flex justify-content-between">
+      <div>
+        <img src="/images/envelpoe.png" style="width:20px; height:20px; filter:invert(100%);">
+        <a href="" class="navbar-sm-brand text-light text-decoration-none">info@milymilashop.com</a>
+        <img src="/images/phone.png" style="width:20px; height:20px; filter:invert(100%);">
+        <a href="" class="navbar-sm-brand text-white text-decoration-none">+233 358 3566 231</a>
       </div>
-    </nav> 
-  </div>
-
-
-<!--second navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container d-flex">
-    <div class="logo">
-    <h2 style="font-family:fantasy;color:#ff620a">Mily<span style="color:#28a745">Mila</span></h2>
+      <div>
+        <img src="/images/facebook.png" style="width:20px; height:20px; filter:invert(100%);" class="space">
+        <img src="/images/Ig.png" style="width:20px; height:20px; filter:invert(100%);" class="space">
+        <img src="/images/tweet.png" style="width:20px; height:20px; filter:invert(100%);" class="space">
+      </div>
     </div>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item nav-items">
-              <a class="nav-link nav-links" aria-current="page" href="#">Home</a> 
-            </li>          
-            <li class="nav-item nav-items">
-              <a class="nav-link nav-links" href="#">About</a>
-            </li>  
-            <li class="nav-item nav-items">
-              <a class="nav-link nav-links" href="#">Shop</a>
-            </li>  
-            <li class="nav-item nav-items">
-              <a class="nav-link nav-links" href="#">Contact</a>
-            </li>
-            <div>              
-              <img src="/images/cart.png" style="width:30px; height:30px;"class="space" >             
-              <img src="/images/icon2.png" style="width:30px; height:30px;"class="space">               
-              <img src="/images/user.png" style="width:30px; height:30px;"class="space">
-            </div> 
-          </ul>
-        </div>
-      </div>
-    </nav>
-
   </div>
 </nav>
 
-<!--home section-->
-<section class="home">
-    <div class="content">
-      <h2>GROCERY SHOPPING</h2>
-      <h4>Make your Grocery Shopping <em>easier</em> today.</h4>
-      <p>Stock up and save big! Your one-stop shop for all grocery needs.<br>Shop now and enjoy discounts!</p>
-      <button id="shopnow">Shop Now</button>
+<!-- Second navbar  -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container d-flex justify-content-between">
+    <div class="logo">
+      <h2 style="font-family:fantasy;color:#ff620a">Mily<span style="color:#28a745">Mila</span></h2>
     </div>
     <div>
-      <img src="images/grocery.png" style="width:750px; height:460px;">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item nav-items">
+          <a class="nav-link nav-links" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item nav-items">
+          <a class="nav-link nav-links" href="#">About</a>
+        </li>
+        <li class="nav-item nav-items">
+          <a class="nav-link nav-links" href="#">Shop</a>
+        </li>
+        <li class="nav-item nav-items">
+          <a class="nav-link nav-links" href="#">Contact</a>
+        </li>
+      </ul>
     </div>
-</section>
+    <div>
+      <img src="/images/cart.png" style="width:30px; height:30px;" class="space">
+      <img src="/images/icon2.png" style="width:30px; height:30px;" class="space">
+      <img src="/images/user.png" style="width:30px; height:30px;" class="space">
+    </div>
+  </div>
+</nav>
 
-<!--fisrt card-->
+<!--home section -->
+<section class="home">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 content">
+        <h2>GROCERY SHOPPING</h2>
+        <h4>Make your Grocery Shopping <em>easier</em> today.</h4>
+        <p>Stock up and save big! Your one-stop shop for all grocery needs.<br>Shop now and enjoy discounts!</p>
+        <button id="shopnow" class="btn btn-success">Shop Now</button>
+      </div>
+      <div class="col-md-6">
+        <img src="images/groceries.jpeg" class="img-fluid" alt="Grocery Image">
+      </div>
+    </div>
+  </div>
+</section>
+<!--first card-->
 <div class="spacing">
   <h5>Top categories</h5>
-  <div class="card1" style="background-color:#f8f9fa; width:100%; height:200px">
-    <div class="row">
-      <div class="col-1">
-        <img src="images/carrot.jpeg" class="img-fluid" alt="img-1"style="height:110px;">
-        <h6>Fresh vegetables and fruits</h6><p>{256 items}</p>
+  <div class="card1" style="background-color:#f8f9fa; width:100%; height:auto; padding:20px;">
+    <div class="row row-cols-3 row-cols-md-6 g-4">
+      <div class="col">
+        <img src="images/carrot.jpeg" class="img-fluid" alt="img-1" > 
+        <h6>Fresh vegetables and fruits</h6>
+        <p>{256 items}</p>
       </div>
-      <div class="col-1">
-        <img src="images/drink.jpeg" class="img-fluid " alt="" style="height:110px; margin-top: 20px;">
-        <h6 >Chilled soft beverages</h6><p>{123 items}</p>
+      <div class="col">
+        <img src="images/drink.jpeg" class="img-fluid" alt="">
+        <h6>Chilled soft beverages</h6>
+        <p>{123 items}</p>
       </div>
-      <div class="col-1">
-        <img src="images/bread.jpeg" class="img-fluid" alt="img-1" style="height:110px; width: 110px;">
-        <h6>Fresh breads and bakeries</h6><p>{145 items}</p>
+      <div class="col">
+        <img src="images/bread.jpeg" class="img-fluid" alt="img-1">
+        <h6>Fresh breads and bakeries</h6>
+        <p>{145 items}</p>
       </div>
-      <div  class="col-1">
-        <img src="images/spoon.jpeg" class="img-fluid" alt="img-1" style="height:110px;">
-        <h6>Home and Kitchen appliances</h6><p>{342 items}</p>
+      <div class="col">
+        <img src="images/spoon.jpeg" class="img-fluid" alt="img-1">
+        <h6>Home and Kitchen appliances</h6>
+        <p>{342 items}</p>
       </div>
-      <div  class="col-1 ">
-        <img src="images/chicken.jpeg" class="img-fluid" alt="img-1" style="height:110px;">
-        <h6>Tender meats & chicken</h6><P>{35 items}</P>
+      <div class="col">
+        <img src="images/chicken.jpeg" class="img-fluid" alt="img-1" >
+        <h6>Tender meats & chicken</h6>
+        <p>{35 items}</p>
       </div>
-      <div  class="col-1">
-        <img src="images/milk.jpg" class="img-fluid" alt="img-1" style="height:110px;">
-        <h6>Fresh milk for all purposes</h6><p>{121 items}</p>
+      <div class="col">
+        <img src="images/milk.jpg" class="img-fluid" alt="img-1">
+        <h6>Fresh milk for all purposes</h6>
+        <p>{121 items}</p>
       </div>
-      <div  class="col-1">
-        <img src="images/omo.jpeg" class="img-fluid" alt="img-1" style="height:130px;">
-        <h6>Household detergents</h6><p>{89 items}</p>
+      <div class="col">
+        <img src="images/omo.jpeg" class="img-fluid" alt="img-1" >
+        <h6>Household detergents</h6>
+        <p>{89 items}</p>
       </div>
-      <div  class="col-1">
-        <img src="images/biscuit.jpeg" class="img-fluid" alt="img-1" style="height:130px;">
-        <h6>Biscuits and snacks</h6><p>{173 items}</p>
+      <div class="col">
+        <img src="images/biscuit.jpeg" class="img-fluid" alt="img-1">
+        <h6>Biscuits and snacks</h6>
+        <p>{173 items}</p>
       </div>
-      <div  class="col-1">
-        <img src="images/jam.jpeg" class="img-fluid" alt="img-1" style="height:110px;">
-        <h6>Classic strawberry jam</h6><p>{78 items}</p>
+      <div class="col">
+        <img src="images/jam.jpeg" class="img-fluid" alt="img-1" >
+        <h6>Classic strawberry jam</h6>
+        <p>{78 items}</p>
       </div>
-      <div  class="col-1">
-        <img src="images/skin care.jpeg" class="img-fluid" alt="img-1" style="height:130px; width: 130px;">
-        <h6>Personal Care</h6><p>{98 items}</p>
+      <div class="col">
+        <img src="images/skin care.jpeg" class="img-fluid" alt="img-1" >
+        <h6>Personal Care</h6>
+        <p>{98 items}</p>
       </div>
-      <div  class="col-1">
-        <img src="images/images.jpeg" class="img-fluid" alt="img-1" style="height:110px;">
-        <h6>Mackerels & seasonings</h6><p>{352 items}</p>
+      <div class="col">
+        <img src="images/images.jpeg" class="img-fluid" alt="img-1" >
+        <h6>Mackerels & seasonings</h6>
+        <p>{352 items}</p>
       </div>
-      <div  class="col-1">
-        <img src="images/pet food.jpeg" class="img-fluid" alt="img-1" style="height:150px;">
-        <h6>Pet Care</h6><p>{90 items}</p>
+      <div class="col">
+        <img src="images/pet food.jpeg" class="img-fluid" alt="img-1">
+        <h6>Pet Care</h6>
+        <p>{90 items}</p>
       </div>
     </div>
   </div>
 </div>
+
+
+
 
 
 <!--second card-->
@@ -182,24 +192,22 @@
   </div>
 </div>
 
-
-<!--Third Card-->
-
+<!--third card-->
 <div class="oval-card">
-    <div class="spacing">
-      <div class="row">
-        <div class="col-7">
-          <img src="images/display.jpeg" class="img-fluid" alt="img-1"style="height:300px; width:700px;">
-        </div>
-        <div class="col-5 top" >
-          <h1 style="color:white">Amazon Delivers To You</h1>
-          <h6 style="color:white">Fresh groceries, delivered with precision and care.<br><em>Groceries at your door step!</em></h6>
-          <h1 style="color:yellow">30% OFF</h1>
-          <button class="btn btn-success oval_button">Shop now</button> 
-        </div>
+  <div class="spacing">
+    <div class="row">
+      <div class="col-md-7">
+        <img src="images/display.jpeg" class="img-fluid" alt="img-1">
       </div>
-    </div>   
-</div>     
+      <div class="col-md-5 top">
+        <h1 style="color:white">Amazon Delivers To You</h1>
+        <h6 style="color:white">Fresh groceries, delivered with precision and care.<br><em>Groceries at your door step!</em></h6>
+        <h1 style="color:yellow">30% OFF</h1>
+        <button class="btn btn-success oval_button">Shop now</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
